fixed frame and response

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <div class="row choice-window-block">
         <div class="col-xl-2 col-lg-12">
           <div class="window-wrap">
-            <div data-mode="1" class="window">
+            <div data-mode="1" class="window window--active">
               <img
                 data-active="./images/window-single.svg"
                 src="./images/window-singleActive.svg"
@@ -124,7 +124,7 @@
           </div>
         </div>
         <div class="col-xl-6 col-md-8">
-          <h2 class="main-title" id="type-window">Одностворчетое</h2>
+          <h2 class="main-title" id="type-window">Одностворчатое</h2>
           <div class="row type-window-wrap">
             <div class="col-12">
               <select class="main-select" name="select" required="">
@@ -136,7 +136,7 @@
             </div>
           </div>
           <div class="frame-glass-wrap">
-            <div class="window-frame">
+            <div class="window-frame animation--active">
               <div class="window-glass"></div>
             </div>
             <div class="border-bot">
@@ -305,7 +305,7 @@
                 <div class="col-12">
                   <div class="extend-elems">
                     <span class="extend-item">Детский замок</span>
-                    <span class="extend-item">Подоконик</span>
+                    <span class="extend-item">Подоконник</span>
                     <span class="extend-item">Отлив</span>
                     <span class="extend-item">Сетка</span>
                     <span class="extend-item">Откосы</span>
