--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             </div>
           </div>
         </div>
-        <div class="col-xl-6 col-md-8">
+        <div class="col-xl-6 col-md-8 custom-col-frame">
           <h2 class="main-title" id="type-window">Одностворчатое</h2>
           <div class="row type-window-wrap">
             <div class="col-12">
@@ -283,9 +283,7 @@
               </div>
               <div class="row second-title-wrap">
                 <div class="col-10">
-                  <h3 class="second-title extend-title">
-                    Добавить доп. комплектацию
-                  </h3>
+                  <h3 class="second-title extend-title">доп. комплектацию</h3>
                 </div>
                 <div class="col-2">
                   <button
@@ -316,7 +314,7 @@
                 <div class="col-12 bottom-block">
                   <div class="result-wrap">
                     Общая стоимость:
-                    <span class="text-result" id="result"></span>
+                    <span class="text-result" id="result">10000</span>
                   </div>
                   <button class="order-button">
                     <img
