fixed button adn mm

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                   alt="Стрелка влево"
                   loading="lazy"
                 />
-                <div class="block-width">Ширина, мм</div>
+                <div class="block-width">Ширина, см</div>
                 <img
                   class="arrow-right"
                   src="./images/arrow.svg"
@@ -215,7 +215,7 @@
                   loading="lazy"
                 />
                 <div class="block-height">
-                  <span class="reverse-text">Высота, мм</span>
+                  <span class="reverse-text">Высота, см</span>
                 </div>
                 <img
                   class="arrow-bot"
@@ -238,7 +238,7 @@
                 />
                 <div class="warning-block hidden">
                   Внимание! Значение высоты и ширины ограничены Ширина от 500,
-                  мм до 2700, мм Высота от 500, мм до 1600, мм
+                  см до 2700, см Высота от 500, см до 1600, см
                 </div>
               </div>
             </div>
@@ -251,7 +251,7 @@
                       id="widthInp"
                       class="main-input"
                       type="text"
-                      placeholder="Ширина, мм"
+                      placeholder="Ширина, см"
                     />
                   </div>
                   <div class="col-6">
@@ -260,7 +260,7 @@
                       id="heightInp"
                       class="main-input"
                       type="text"
-                      placeholder="Высота, мм"
+                      placeholder="Высота, см"
                     />
                   </div>
                 </div>
