fixed adaptive and icon

--- a/index.html
+++ b/index.html
@@ -105,13 +105,13 @@
         </div>
       </div>
       <div class="container">
-        <div class="pre-message">
+        <div class="pre-message hidden">
           <h1 class="pre-message-title">
             Для работы калькулятора пожалуйста выберите: профиль, стеклопакет и
             фурнитуру
           </h1>
         </div>
-        <div class="row choice-window-block hidden">
+        <div class="row choice-window-block">
           <div class="col-xl-2 col-lg-12">
             <div class="window-wrap">
               <div class="big-toggle hidden">
